# trading-lab

./: .gitignore  Cargo.toml  Makefile  README.md  verify_pipeline.sh
broker-gateway/: Cargo.toml
broker-gateway/src/: main.rs  paper.rs
controller/: Cargo.toml
controller/src/: main.rs
controller/tests/: layout.json
data-pipeline/: README.md  pyproject.toml
data-pipeline/src/: fetcher.py  processor.py  replayer.py  run_replay_mvp.py
data-pipeline/src/simulators/: brownian_stock.py
data-pipeline/tests/: manual_sub_test.py
demo-runner/: Cargo.toml
demo-runner/src/: main.rs
docs/: 00_vision.md  01_technical_overview.md  02_arch_live.md  03_arch_backtest_engine.md  04_roadmap_implementation.md  05_repo_migration.md  06_saas_security.md  07_adr_distributed_scheduling.md  roadmap_mvp.md  vision.md
dummy-feed/: Cargo.toml
dummy-feed/src/: main.rs
execution-engine/: Cargo.toml
execution-engine/src/: lib.rs  main.rs
execution-engine/src/engine/: mod.rs  tests.rs
execution-engine/src/exchange/: mock.rs  mod.rs
execution-engine/src/gateway/: mod.rs
execution-engine/src/io/: admin.rs  args.rs  gateway.rs  mod.rs  order.rs
execution-engine/src/models/: config.rs  consolidated_portfolio.rs  ids.rs  ingress.rs  instrument.rs  ledger.rs  market.rs  mod.rs  order.rs  portfolio.rs  tests.rs
execution-engine/src/risk_guard/: global_max_position_size.rs  margin_requirement.rs  max_allocation.rs  max_position_size.rs  max_strategy_allocation.rs  mod.rs
forge/: Cargo.toml
forge/src/: args.rs  builder.rs  error.rs  generator.rs  main.rs
forge/src/internal/templates/chassis_app/: Cargo.toml
forge/src/internal/templates/chassis_app/src/: main.rs
gateways/gateway-paper/: Cargo.toml
gateways/gateway-paper/src/: main.rs
multiplexer/: CMakeLists.txt  Cargo.toml  test_admin.py  test_system.py
multiplexer/src/: kelly_multiplexer.rs  main.cpp  main.rs
multiplexer/src/io/: IInputListener.hpp  IOutputPublisher.hpp  ZmqAdminListener.cpp  ZmqAdminListener.hpp  ZmqInputListener.cpp  ZmqInputListener.hpp  ZmqOutputPublisher.cpp  ZmqOutputPublisher.hpp
multiplexer/src/logic/: IMultiplexer.hpp  KellyMultiplexer.cpp  KellyMultiplexer.hpp
multiplexer/src/models/: Portfolio.hpp
multiplexer/src/params/: ClientConfig.hpp
orchestrator-protocol/: Cargo.toml
orchestrator-protocol/src/: client.rs  lib.rs  messages.rs  model.rs  server.rs
portfolio-manager/: Cargo.toml
portfolio-manager/src/: lib.rs  main.rs
portfolio-manager/src/model/: config.rs  consolidated.rs  ids.rs  mod.rs
portfolio-manager/src/risk_guard/: max_allocation.rs  max_position_size.rs  mod.rs
strategy-lab/: CMakeLists.txt  Cargo.toml
strategy-lab/src/: main.cpp  main.rs
strategy-lab/src/io/: ZmqStrategyIO.cpp  ZmqStrategyIO.hpp
strategy-lab/src/models/: MarketData.hpp  Portfolio.hpp
strategy-lab/src/strategies/: DummyStrategy.hpp  IStrategy.hpp
strategy-lab/tests/: integration_test.py
supervisor-backend/: Cargo.toml
supervisor-backend/src/: layout_manager.rs  main.rs
supervisor-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
supervisor-frontend/src/: App.tsx  app.py  index.css
supervisor-frontend/src/api/: client.ts
supervisor-frontend/src/features/orchestrator/: OrchestratorBoard.tsx
supervisor-frontend/src/features/orchestrator/components/: OrchestratorToolbar.tsx  ServiceNode.tsx
supervisor-frontend/src/features/orchestrator/components/panel/: Panel.tsx
supervisor-frontend/src/features/orchestrator/hooks/: useOrchestrator.tsx  useProcessMonitor.ts
supervisor-frontend/src/features/orchestrator/utils/: layoutPersistence.ts  nodeFactory.ts
system-orchestrator/: Cargo.toml  README.md  layouts.json
system-orchestrator/src/: admin_client.rs  api.rs  config.rs  event_bus.rs  main.rs  process_manager.rs  state.rs  zmq_monitor.rs
system-orchestrator/src/api/: mod.rs  server.rs
system-orchestrator/src/layout/: engine.rs  manager.rs  mod.rs  model.rs
system-orchestrator/src/layout/models/: edge.rs  layout.rs  mod.rs  node.rs
system-orchestrator/src/process/: config_resolver.rs  manager.rs  mod.rs
system-orchestrator/src/process/models/: config.rs  mod.rs  port_allocator.rs  state.rs
system-orchestrator/src/registry/: catalog.rs  disk.rs  mod.rs
system-orchestrator/src/runtime/: client.rs  local.rs  mod.rs  traits.rs
system-orchestrator/src/supervisor/: mod.rs  worker.rs
templates/multiplexer-static/: Cargo.toml
templates/multiplexer-static/src/: lib.rs
templates/strategy-standard/: Cargo.toml
templates/strategy-standard/src/: lib.rs
trading-api/: Cargo.toml
trading-api/src/: lib.rs  macros.rs
trading-api/src/model/: execution.rs  identity.rs  instrument.rs  instrument_db.rs  market_data.rs  mod.rs  policy.rs
trading-core/: CMakeLists.txt  Cargo.toml  build.rs
trading-core/include/: trading_core.h  trading_core.hpp
trading-core/src/: lib.rs  macros.rs
trading-core/src/admin/: command.rs  mod.rs  registry.rs  server.rs
trading-core/src/args/: mod.rs
trading-core/src/comms/: address.rs  builder.rs  exchange.rs  mod.rs  packet.rs  socket.rs  transport.rs  zmq.rs
trading-core/src/comms/transports/: memory.rs  mod.rs  zmq.rs
trading-core/src/ffi/: mod.rs
trading-core/src/framework/: context.rs  launcher.rs  mod.rs  runner.rs  runner_manager.rs  strategy.rs
trading-core/src/framework/persistence/: instrument_loader.rs  mod.rs
trading-core/src/fs/: mod.rs  paths.rs  persistence.rs
trading-core/src/manifest/: mod.rs
trading-core/src/microservice/: configuration.rs  mod.rs  registry.rs
trading-core/src/microservice/configuration/: broker_gateway.rs  execution_engine.rs  feeder.rs  mod.rs  multiplexer.rs  portfolio_manager.rs  strategy.rs
trading-core/src/model/: allocation.rs  allocation_batch.rs  identity.rs  instrument.rs  instrument_db.rs  manifest.rs  market_data.rs  mod.rs  order.rs  portfolio.rs  portoflio.rs
trading-core/tests/: comms_integration_test.rs  framework_test.rs  integration_test.rs  multiplexer_integration_test.rs  pipeline_integration_test.rs
(+8 files in other folders)
