[workspace]
resolver = "2"
members = [
    "trading-api",
    "trading-core",
    "execution-engine",
    "multiplexer",
    "strategy-lab",
    "system-orchestrator",
    "portfolio-manager",
    "broker-gateway",
    "demo-runner",
    "gateways/gateway-paper", "orchestrator-protocol", "controller", "supervisor-backend", "dummy-feed",
]
