[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml_edit = "0.21"
fs_extra = "1.3"
tempfile = "3.8"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
rand = "0.9.2"
