[package]
name = "multiplexer"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-core = { path = "../trading-core" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
