[package]
name = "supervisor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

orchestrator-protocol = { version = "0.1.0", path = "../orchestrator-protocol" }
trading-core = { version = "0.1.0", path = "../trading-core" }
