[package]
name = "system-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.9"
config = "0.13"
anyhow = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
