[package]
name = "trading-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
zmq = "0.9" # Libzmq bindings
# zeromq = "0.3" # Removed due to build issues
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
async-trait = "0.1"
cxx = "1.0"
bincode = "1.3"

[build-dependencies]
cxx-build = "1.0"
